FEAT: added routes for rooms
