# gen/openapi/openapi.yaml
@@ -12,6 +12,8 @@ tags:
     description: Everything about managing user sessions
   - name: me
     description: Everything about managing current user profile
+  - name: rooms
+    description: Everything about managing rooms
   - name: users
     description: Everything about searching users
   - name: jokes
@@ -444,6 +446,150 @@ paths:
           description: Like deleted
         default:
           $ref: '#/components/responses/code_error'
+  /me/rooms:
+    get:
+      tags:
+        - me
+        - rooms
+      summary: Returns rooms current user is a member of
+      operationId: MeRoomsGet
+      parameters:
+        - $ref: '#/components/parameters/query_select_params'
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          $ref: '#/components/responses/rooms'
+        default:
+          $ref: '#/components/responses/code_error'
+    post:
+      tags:
+        - me
+      summary: Creates a new room
+      operationId: MeRoomsPost
+      security:
+        - bearerAuth: []
+      requestBody:
+        description: Data to create a new room
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: My Room
+                description:
+                  type: string
+                  example: This is my room
+              required:
+                - name
+      responses:
+        '201':
+          $ref: '#/components/responses/room'
+        default:
+          $ref: '#/components/responses/code_error'
+    put:
+      tags:
+        - me
+      summary: Updates room
+      operationId: MeRoomsPut
+      security:
+        - bearerAuth: []
+      requestBody:
+        description: Data to update the room
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string
+                  example: 48690945-c3f9-45b4-9045-c6bcfb898f20
+                name:
+                  type: string
+                  example: My Room
+                description:
+                  type: string
+                  example: This is my room
+              required:
+                - id
+      responses:
+        '201':
+          $ref: '#/components/responses/room'
+        default:
+          $ref: '#/components/responses/code_error'
+    delete:
+      tags:
+        - me
+      summary: Deletes room
+      operationId: MeRoomsDelete
+      security:
+        - bearerAuth: []
+      requestBody:
+        description: Data to delete the room
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string
+                  example: 48690945-c3f9-45b4-9045-c6bcfb898f20
+              required:
+                - id
+      responses:
+        '204':
+          description: Room deleted
+        default:
+          $ref: '#/components/responses/code_error'
+  /me/rooms/join:
+    post:
+      tags:
+        - me
+        - rooms
+      summary: Join room
+      operationId: MeChatRoomsJoinPost
+      security:
+        - bearerAuth: []
+      requestBody:
+        description: Data to join room
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string
+                  example: 48690945-c3f9-45b4-9045-c6bcfb898f20
+              required:
+                - id
+      responses:
+        '201':
+          description: Joined room
+        default:
+          $ref: '#/components/responses/code_error'
+  /rooms/{room_id}/messages:
+    get:
+      tags:
+        - me
+        - rooms
+      summary: Retrieve messages from a room
+      operationId: MeRoomsIdMessagesGet
+      parameters:
+        - $ref: '#/components/parameters/path_room_id'
+        - $ref: '#/components/parameters/query_select_params'
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          $ref: '#/components/responses/room_messages'
+        default:
+          $ref: '#/components/responses/code_error'
   /comments/{joke_id}:
     get:
       tags:
@@ -582,6 +728,55 @@ components:
         - joke_id
         - text
         - createdAt
+    room:
+      type: object
+      properties:
+        id:
+          type: string
+          example: 48690945-c3f9-45b4-9045-c6bcfb898f20
+        creator_id:
+          type: string
+          example: 48690945-c3f9-45b4-9045-c6bcfb898f20
+        name:
+          type: string
+          example: Funny Dad Jokes
+        description:
+          type: string
+          example: A place to share the best dad jokes
+        created_at:
+          type: string
+          format: date-time
+          example: '2021-08-01T00:00:00Z'
+      required:
+        - id
+        - creator_id
+        - name
+        - created_at
+    room_message:
+      type: object
+      properties:
+        id:
+          type: string
+          example: 48690945-c3f9-45b4-9045-c6bcfb898f20
+        room_id:
+          type: string
+          example: 48690945-c3f9-45b4-9045-c6bcfb898f20
+        user_id:
+          type: string
+          example: 48690945-c3f9-45b4-9045-c6bcfb898f20
+        text:
+          type: string
+          example: Hello, world!
+        created_at:
+          type: string
+          format: date-time
+          example: '2021-08-01T00:00:00Z'
+      required:
+        - id
+        - room_id
+        - user_id
+        - text
+        - created_at
   responses:
     code_error:
       description: General Error
@@ -620,6 +815,38 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/comment'
+    rooms:
+      description: List of rooms
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              rooms:
+                type: array
+                items:
+                  $ref: '#/components/schemas/room'
+            required:
+              - rooms
+    room:
+      description: Place for discussing the humour
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/room'
+    room_messages:
+      description: List of room messages
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              room_messages:
+                type: array
+                items:
+                  $ref: '#/components/schemas/room_message'
+            required:
+              - room_messages
     comments:
       description: Array of comments
       content:
@@ -650,6 +877,13 @@ components:
           offset:
             type: integer
             minimum: 0
+    path_room_id:
+      name: room_id
+      in: path
+      description: ID of the room
+      required: true
+      schema:
+        type: string
     path_joke_id:
       name: joke_id
       in: path
